1.14 social bar has been updated wied spacing bug fixed

--- a/src/CSS/socials.css
+++ b/src/CSS/socials.css
@@ -1,7 +1,5 @@
 .row {
   background-color: black;
-  width: 100vw;
-  height: 10%;
 }
 
 .btn {
